--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "newsletter",
   "main": "app.js",
   "scripts": {
+
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+
   "author": "lucky",
   "license": "ISC",
   "dependencies": {
